2008-02-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-app.h:
	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	Simplify error handling for MIME retrieving

2008-02-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	Fix for crash when handling mime for some exotic permissions

2008-01-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.cc:
	Simplify code for string handling

2008-01-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	Do not use escaped directory name when runnning editor application

2008-01-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	Run "Open with other..." application in file's directory

2008-01-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-dir.cc:
	Fixed problem #510567 (failed assert when deleting dir)

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-dir.h:
	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-props-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-rename-dialog.cc:
	Fixed problem #345314 (cursor not staying on file while renaming)

2008-01-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Point to the focused file properly

2008-01-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/image-render.cc:
	Yet another fix for problem with updating of internal viewer status bar

	* src/gnome-cmd-file-props-dialog.cc:
	Added "kbps" to Audio.Bitrate tag presented in file properties dlg

2008-01-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-lexer.ll:
	Fixed problem #508565 (improper utf-8 handling in advanced file rename tool)

	* src/gnome-cmd-advrename-dialog.cc:
	Set template combo history as case sensitive

	* src/gnome-cmd-file-list.cc:
	Yet another fix for cursor going astray

2008-01-14  Piotr Eljasiak  <epiotr@use.pl>
